[package]
name = "et-native"
version = "0.1.0"
edition = "2021"

[lib]
name = "et_native"
# cdylib for the game (LuaJIT ffi.load), rlib so integration tests can link.
crate-type = ["cdylib", "rlib"]

[dependencies]
buttplug_client = "10"
buttplug_core = "10"
buttplug_transport_websocket_tungstenite = "10"
serde_json = "1"
futures = "0.3"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }

# catch_unwind in the FFI exports only works with unwinding panics.
[profile.release]
panic = "unwind"
